--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   pin_code_fields: 7.4.0
   fluid_bottom_nav_bar: 1.3.0
   pretty_qr_code: 2.0.2
+  dropdown_button2: 1.8.9
   flutter: 
     sdk: flutter
 
